# BDR

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/accounts/: README.md  admin.py  admin_urls.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_add_user_email_verification.py  0003_add_password_reset_token.py
apps/audit/: README.md  admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/imports/: README.md  admin.py  parser.py  urls.py  views.py
apps/listings/: README.md  admin.py  admin_urls.py  admin_views.py  apps.py  email_verification_views.py  models.py  search_views.py  serializers.py  signals.py  slug_utils.py  tasks.py  urls.py  views.py
apps/listings/management/commands/: seed_listings.py
apps/listings/migrations/: 0001_initial.py  0002_add_soft_delete_to_business_listing.py
apps/notifications/: README.md  admin.py  models.py  serializers.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py
nginx/: nginx.conf
scripts/: init_db.sql
